# AiZOGraph

./: CMakeLists.txt  main.cpp
Algorithms/Bellman/: Bellman.cpp  Bellman.h
Algorithms/Dijkstra/: Dijkstra.cpp  Dijkstra.h
Algorithms/Kruskal/: Kruskal.cpp  Kruskal.h
Algorithms/Prim/: Prim.cpp  Prim.h
List/: GraphList.cpp  GraphList.h
Matrix/: GraphIncidence.cpp  GraphIncidence.h
Utils/: utils.cpp  utils.h
